--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "node-sass": "4.14.1",
     "nuxt": "^2.14.0",
     "sass-loader": "^10.0.2",
+    "vercel-builder": "^0.0.2",
     "vue": "^2.6.12"
   },
   "devDependencies": {
