--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@nuxtjs/axios": "^5.12.0",
     "bootstrap": "^4.5.2",
     "bootstrap-vue": "^2.16.0",
-    "node-sass": "4.14.1",
     "nuxt": "^2.14.0",
+    "sass": "^1.57.1",
     "sass-loader": "^10.0.2",
     "vercel-builder": "^0.0.2",
     "vue": "^2.6.12"
